apps/torrent/manifests/qbittorrent/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: torrent
spec:
  selector:
    app: qbittorrent
  ports:
    - name: http
      port: 8090
      targetPort: 8090
  type: ClusterIP
